--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 .Ruserdata
 spotify_clean.csv
 spotify.csv
+cc-est2016-alldata.csv
+cc-est2016-alldata.pdf
+TopBabyNamesbyState.txt
+tinder_clean.rds
